# CommandLine-Encrypt-Decrypt-Tool-with-AES-NI-for-MacOS-on-ARM64

./: CMakeLists.txt
decrypt/: decrypt_cli.c
encrypt/: encrypt_cli.c
include/: AES_with_NI.h  decrypt_cli.h  encrypt.h  sha256.h  util.h
src/: AES_with_NI.c  sha256.c  util.c
test/: TestFile.txt  aes_test.c  test
test/TestDir/: File1.txt
